Fixed overflow for site list x and y

--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -157,11 +157,13 @@ button:hover {
     border: 2px solid $cPink;
     border-top: 0px;
     border-bottom: 0px;
+    overflow-y: scroll;
 }
 
-.site-text {
-    overflow: scroll;
+.sites-cont::-webkit-scrollbar {
+    display: none;
 }
+
 
 .sites-cont div {
     display: grid;
@@ -172,9 +174,14 @@ button:hover {
 .site-name-txt {
     grid-row: 1;
     grid-column: 1;
-    overflow: hidden;
     font-size: 16px;
     width: 200px;
+    white-space: nowrap;
+    overflow-x: scroll;
+}
+
+.site-name-txt::-webkit-scrollbar {
+    display: none;
 }
 
 .del-site-btn {
@@ -184,7 +191,6 @@ button:hover {
     font-weight: 900;
     color: $cPink;
     background: none;
-    padding-right: 10px;
     height: max-content;
 }
 
